k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adnimals-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: flask.myapp.com
      http:
        paths:
          - path: /4danimals(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: flask-app-service
                port:
                  number: 8080
    - host: prometheus.myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
    - host: grafana.myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
